dockers/eventrestapi/logs/error.log
/var/www/events.js:36
app.configure(function() {
    ^
TypeError: undefined is not a function
    at Object.<anonymous> (/var/www/events.js:36:5)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3
/var/www/events.js:36
app.configure(function() {
    ^
TypeError: undefined is not a function
    at Object.<anonymous> (/var/www/events.js:36:5)
    at Module._compile (module.js:460:26)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3
Error: passport.initialize() middleware not in use
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:30:30)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
    at verified (/node_modules/passport-http/lib/passport-http/strategies/basic.js:91:10)
    at /var/www/events.js:29:12
    at findByUsername (/var/www/events.js:14:11)
    at BasicStrategy._verify (/var/www/events.js:26:4)
    at BasicStrategy.authenticate (/node_modules/passport-http/lib/passport-http/strategies/basic.js:97:10)
    at attempt (/node_modules/passport/lib/middleware/authenticate.js:341:16)
    at authenticate (/node_modules/passport/lib/middleware/authenticate.js:342:7)
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
Error: passport.initialize() middleware not in use
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:30:30)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
    at verified (/node_modules/passport-http/lib/passport-http/strategies/basic.js:91:10)
    at /var/www/events.js:29:12
    at findByUsername (/var/www/events.js:14:11)
    at BasicStrategy._verify (/var/www/events.js:26:4)
    at BasicStrategy.authenticate (/node_modules/passport-http/lib/passport-http/strategies/basic.js:97:10)
    at attempt (/node_modules/passport/lib/middleware/authenticate.js:341:16)
    at authenticate (/node_modules/passport/lib/middleware/authenticate.js:342:7)
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
Error: passport.initialize() middleware not in use
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:30:30)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
    at verified (/node_modules/passport-http/lib/passport-http/strategies/basic.js:91:10)
    at /var/www/events.js:29:12
    at findByUsername (/var/www/events.js:14:11)
    at BasicStrategy._verify (/var/www/events.js:26:4)
    at BasicStrategy.authenticate (/node_modules/passport-http/lib/passport-http/strategies/basic.js:97:10)
    at attempt (/node_modules/passport/lib/middleware/authenticate.js:341:16)
    at authenticate (/node_modules/passport/lib/middleware/authenticate.js:342:7)
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
Error: passport.initialize() middleware not in use
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:30:30)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
    at verified (/node_modules/passport-http/lib/passport-http/strategies/basic.js:91:10)
    at /var/www/events.js:29:12
    at findByUsername (/var/www/events.js:14:11)
    at BasicStrategy._verify (/var/www/events.js:26:4)
    at BasicStrategy.authenticate (/node_modules/passport-http/lib/passport-http/strategies/basic.js:97:10)
    at attempt (/node_modules/passport/lib/middleware/authenticate.js:341:16)
    at authenticate (/node_modules/passport/lib/middleware/authenticate.js:342:7)
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
Error: passport.initialize() middleware not in use
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:30:30)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
    at verified (/node_modules/passport-http/lib/passport-http/strategies/basic.js:91:10)
    at /var/www/events.js:29:12
    at findByUsername (/var/www/events.js:14:11)
    at BasicStrategy._verify (/var/www/events.js:26:4)
    at BasicStrategy.authenticate (/node_modules/passport-http/lib/passport-http/strategies/basic.js:97:10)
    at attempt (/node_modules/passport/lib/middleware/authenticate.js:341:16)
    at authenticate (/node_modules/passport/lib/middleware/authenticate.js:342:7)
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
ReferenceError: AWS is not defined
    at /var/www/events.js:44:16
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
    at next (/node_modules/express/lib/router/route.js:110:13)
    at complete (/node_modules/passport/lib/middleware/authenticate.js:243:13)
    at /node_modules/passport/lib/middleware/authenticate.js:250:15
    at pass (/node_modules/passport/lib/authenticator.js:427:14)
    at Authenticator.transformAuthInfo (/node_modules/passport/lib/authenticator.js:449:5)
    at /node_modules/passport/lib/middleware/authenticate.js:247:22
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:49:13)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
ReferenceError: err is not defined
    at /var/www/events.js:58:36
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
    at next (/node_modules/express/lib/router/route.js:110:13)
    at complete (/node_modules/passport/lib/middleware/authenticate.js:243:13)
    at /node_modules/passport/lib/middleware/authenticate.js:250:15
    at pass (/node_modules/passport/lib/authenticator.js:427:14)
    at Authenticator.transformAuthInfo (/node_modules/passport/lib/authenticator.js:449:5)
    at /node_modules/passport/lib/middleware/authenticate.js:247:22
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:49:13)
    at BasicStrategy.strategy.success (/node_modules/passport/lib/middleware/authenticate.js:228:13)
/var/www/events.js:75
});
^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Function.Module.runMain (module.js:501:10)
    at startup (node.js:129:16)
    at node.js:814:3
ReferenceError: err is not defined
    at sqsmessageadd (/var/www/events.js:16:35)
    at /var/www/events.js:65:2
    at Layer.handle [as handle_request] (/node_modules/express/lib/router/layer.js:82:5)
    at next (/node_modules/express/lib/router/route.js:110:13)
    at complete (/node_modules/passport/lib/middleware/authenticate.js:243:13)
    at /node_modules/passport/lib/middleware/authenticate.js:250:15
    at pass (/node_modules/passport/lib/authenticator.js:427:14)
    at Authenticator.transformAuthInfo (/node_modules/passport/lib/authenticator.js:449:5)
    at /node_modules/passport/lib/middleware/authenticate.js:247:22
    at IncomingMessage.req.login.req.logIn (/node_modules/passport-http/node_modules/passport/lib/passport/http/request.js:49:13)
